# win_automation_mcp

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  TASK_EDIT_GUIDE.md  TASK_GUIDE.md  __init__.py  automation_graph.py  chatrtd_cli.py  cli.py  debug_log.txt  debug_mcp.py  debug_sse.py  diagnose_notepad.py  finetune_gemma.py  gemma_serving.py  mcp_client.py  mcp_server.py  prepare_dataset.py  pyproject.toml  requirements.txt  structure_guide.md  tmp_test_conn.py  verify_fix.py  verify_focus_restoration.py  verify_path_restriction.py
LLM/: api_info.txt  finetune_gemma.py  gemma_serving.py  groq_tool_guide.md  langgraph_agent.py  openprovider_tool_guide.md  prepare_dataset.py  streamlit_app.py
actions/: __init__.py  app_ui_action.py  color_click_action.py  desktop_action.py  locator_update_action.py  login_action.py  run_action.py  source_open_action.py
chatRTD_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
config/: app_config.yaml  app_config.yaml.example  gemini_settings.json.example  icon_registry.yaml  locator.yaml  oracle_databases.yaml.example  skills.yaml  skills.yaml.example
core/: __init__.py  api_config.py  app_launcher.py  app_session.py  async_loop_runner.py  automation_control_overlay_ui.py  automation_run_control.py  browser_fetch.py  browser_mcp_connect.py  browser_mcp_fetch.py  chrome_paths.py  dataset_cache.py  file_path_policy.py  launch_paths.py  llm_config.py  llm_factory.py  llm_logging.py  mcp_client.py  mcp_hub.py  mcp_probe.py  mcp_result_utils.py  mcp_server_config.py  network_utils.py  oracle_config.py  (+7 more)
(+126 files in other folders)
